Copyright (c) 2002-2009 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes

  Silva 2.1.3b3 (unreleased)

    Ported from Silva Trunk (2.2b1)

      - CTRL+SHIFT+ENTER in kupu while the cursor is in a table will
        create a new empty paragraph below the table.  This feature
        is to improve editing ability when a table is adjacent to an
        external source or another table

      - improve keyboard navigability in kupu around external sources:
        left,right in an ES moves cursor up
        enter in an ES inserts a new paragraph after and moves cursor
        down, right, tab in an es moves cursor down

      - if an ES is the first element in a document, activate the ES
        tool when kupu initializes, and ignore the tab key when in an
        external source.

  Silva 2.1.3b2 (2009-03-20)

    Bug fixes

      - Fixex an invalid syntax in webdav support.
      - Fixed an issue in Kupu, where text got 'title' style instead
        of 'plain'.

    Ported from Silva Trunk (2.2b1)

      - LinesFields in external sources would not be saved in kupu if they
        were empty.

      - zip files generated in MACOSX can now be imported -- the skips meta
        information directories are now skipped (__MACOSX and .DS_Store)

  Silva 2.1.3b1 (2009-03-12)

    Bug fixes

      - Take out extra newline in test xslt string.

      - Add a new URL_PATTERN to SilvaDocument mixedcontentsupport.py
        to return a correct path (see test_mixincontentsupport.py).

      - Add a document upgrader to clean rendering caches of
        document. Cache were not refreshed after a new version of a
        document is published on some platforms.

  Silva 2.1.2 (2009-03-05)

    Bug fixes

      - Redirect to the nearest publication when login out from SMI.

      - Refactor all the SidebarCache service. Remove cache objects
        from temporary container, use GenericCache when available.

      - Remove the 'edit_mode' and 'editor' variable from